--- a/web-module/src/main/resources/templates/article.html
+++ b/web-module/src/main/resources/templates/article.html
@@ -3,9 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Article</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
-
+    <link rel="stylesheet" th:href="@{/css/bootstrap.css}">
+    <link rel="stylesheet" th:href="@{/css/bootstrap.rtl.css}">
 </head>
 <body>
 
@@ -28,7 +27,13 @@
         <p th:text="${article.userFirstname} + ' ' + ${article.userLastname}"></p>
     </div>
 
-    <a class="page-link" th:href="@{/articles}">Back</a>
+    <div th:if="${role}=='SALE_USER'">
+        <form action="#" th:action="@{/articles/change/{uuid}(uuid=${article.uuid})}" method="get">
+            <button type="submit" class="btn btn-primary bnt-sm mb-3">Change article</button>
+        </form>
+    </div>
+
+    <a class="page-link btn" th:href="@{/articles}">Back</a>
 
     <div class="col" th:each="comment : ${article.comments}">
         <div>
@@ -39,6 +44,14 @@
                 <div class="col-6 col-md-4" th:text="${comment.dateAdded}" align="right"></div>
             </div>
             <p th:text="${comment.content}"></p>
+            <div th:if="${role}=='SALE_USER'">
+                <form action="#" th:action="@{/comment/delete}" th:method="post">
+                    <lable for="deleteComment"></lable>
+                    <input type="hidden" name="idCommentForDelete" th:value="${comment.id}" id="deleteComment">
+                    <input type="hidden" name="uuidArticle" th:value="${article.uuid}">
+                    <button type="submit" class="btn btn-primary bnt-sm mb-3">Delete comment</button>
+                </form>
+            </div>
         </div>
     </div>
 </div>
