--- a/web-module/src/main/resources/templates/articles.html
+++ b/web-module/src/main/resources/templates/articles.html
@@ -3,14 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <title>Articles</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+    <link rel="stylesheet" th:href="@{/css/bootstrap.css}">
+    <link rel="stylesheet" th:href="@{/css/bootstrap.rtl.css}">
 </head>
 <body>
 
 <div class="container">
     <h1>Articles</h1>
     <div class="container">
+        <div th:if="${role}=='SALE_USER'">
+            <a class="btn btn-primary bnt-sm mb-3" th:href="@{/articles/add}">Add article</a>
+        </div>
         <div class="row row-cols-3">
             <div class="col" th:each="article : ${page.objects}">
                 <article>
@@ -21,12 +24,18 @@
                     </div>
                     <p th:text="${article.content} + '...'"></p>
                     <a type="page-link" th:href="@{/articles/{uuid}(uuid=${article.uuid})}">Read more</a>
+
+                    <div th:if="${role}=='SALE_USER'">
+                        <form action="#" th:action="@{/articles/delete}" th:method="post">
+                            <lable for="deleteArticle"></lable>
+                            <input type="hidden" name="idArticleForDelete" th:value="${article.id}" id="deleteArticle">
+                            <button type="submit" class="btn btn-primary bnt-sm mb-3">Delete article</button>
+                        </form>
+                    </div>
                 </article>
             </div>
         </div>
     </div>
-
-
     <ul class="pagination" th:if="${page.numbersOfPage.size() > 0}">
         <li class="page-item" th:each="pageNumber : ${page.numbersOfPage}">
             <a class="page-link" th:href="@{'/articles?page=' + ${pageNumber}}"
