--- a/web-module/src/main/resources/templates/register-user.html
+++ b/web-module/src/main/resources/templates/register-user.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Add user</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+    <link rel="stylesheet" th:href="@{/css/bootstrap.css}">
+    <link rel="stylesheet" th:href="@{/css/bootstrap.rtl.css}">
 </head>
 <body>
 <div style="width: 25%; margin-left: auto; margin-right: auto;">
@@ -33,7 +33,7 @@
 
         <div class="mb-3">
             <label for="role" class="form-label">Role</label>
-            <select id="role" class="form-select" name="role">
+            <select id="role" class="form-select" name="roleId">
                 <option th:each="role : ${roles}"
                         th:value="${role.id}" th:text="${role.roleName}">Role
                 </option>
@@ -43,9 +43,6 @@
     </form>
 </div>
 
-
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
-        crossorigin="anonymous"></script>
+<script th:src="@{/js/bootstrap.bundle.js}"></script>
 </body>
 </html>
