--- a/web-module/src/main/resources/templates/reviews.html
+++ b/web-module/src/main/resources/templates/reviews.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Reviews</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+    <link rel="stylesheet" th:href="@{/css/bootstrap.css}">
+    <link rel="stylesheet" th:href="@{/css/bootstrap.rtl.css}">
 
 </head>
 <body>
@@ -20,7 +20,7 @@
             <th>Feedback</th>
             <th>Date added</th>
             <th>Status show</th>
-            <th>Is active</th>
+            <th>Action</th>
         </tr>
         </thead>
         <tbody>
@@ -58,9 +58,6 @@
     </button>
 </div>
 
-
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
-        crossorigin="anonymous"></script>
+<script th:src="@{/js/bootstrap.bundle.js}"></script>
 </body>
 </html>
