--- a/web-module/src/main/resources/templates/articles.html
+++ b/web-module/src/main/resources/templates/articles.html
@@ -8,6 +8,28 @@
 </head>
 <body>
 
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container-fluid">
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item" th:if="${role}=='CUSTOMER_USER'">
+                    <a class="nav-link" th:href="@{/reviews/add}">Add reviews</a>
+                </li>
+                <li class="nav-item" th:if="${role}=='CUSTOMER_USER'">
+                    <a class="nav-link" th:href="@{/profile}">Profile</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" th:href="@{/items}">Items</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" th:href="@{/orders}" tabindex="-1">Orders</a>
+                </li>
+            </ul>
+            <a class="btn btn-outline-success" th:href="@{/logout}">Logout</a>
+        </div>
+    </div>
+</nav>
+
 <div class="container">
     <h1>Articles</h1>
     <div class="container">
@@ -43,5 +65,7 @@
         </li>
     </ul>
 </div>
+
+<script th:src="@{/js/bootstrap.bundle.js}"></script>
 </body>
 </html>
