--- a/web-module/src/main/resources/templates/item.html
+++ b/web-module/src/main/resources/templates/item.html
@@ -11,21 +11,27 @@
 <table>
     <tr>
         <td><h1>Name:</h1></td>
-        <td><h1 th:text="${item.name}"></h1></td>
+        <td><h2 th:text="${item.name}"></h2></td>
     </tr>
     <tr>
         <td><h1>Unique number:</h1></td>
-        <td><h1 th:text="${item.uniqueNumber}"></h1></td>
+        <td><h2 th:text="${item.uniqueNumber}"></h2></td>
     </tr>
     <tr>
         <td><h1>Price:</h1></td>
-        <td><h1 th:text="${item.price}"></h1></td>
+        <td><h2 th:text="${item.price}"></h2></td>
     </tr>
     <tr>
         <td><h1>Summary:</h1></td>
-        <td><h1 th:text="${item.summary}"></h1></td>
+        <td><h2 th:text="${item.summary}"></h2></td>
     </tr>
 </table>
+
+<form action="#" th:action="@{/orders/add}" th:method="get" th:if="${role}=='CUSTOMER_USER'">
+    <lable for="addOrder"></lable>
+    <input type="hidden" name="item" th:value="${item.uniqueNumber}" id="addOrder">
+    <button type="submit" class="btn btn-primary bnt-sm mb-3">Order</button>
+</form>
 
 <a class="page-link btn" th:href="@{/items}">Back</a>
 </body>
