--- a/web-module/src/main/resources/templates/items.html
+++ b/web-module/src/main/resources/templates/items.html
@@ -8,32 +8,53 @@
 </head>
 <body>
 
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container-fluid">
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                    <a class="nav-link" aria-current="page" th:href="@{/articles}">Articles</a>
+                </li>
+                <li class="nav-item" th:if="${role}=='CUSTOMER_USER'">
+                    <a class="nav-link" th:href="@{/reviews/add}">Add reviews</a>
+                </li>
+                <li class="nav-item" th:if="${role}=='CUSTOMER_USER'">
+                    <a class="nav-link" th:href="@{/profile}">Profile</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" th:href="@{/orders}" tabindex="-1">Orders</a>
+                </li>
+            </ul>
+            <a class="btn btn-outline-success" th:href="@{/logout}">Logout</a>
+        </div>
+    </div>
+</nav>
 
 <div class="container">
     <h1>Items</h1>
     <table border="1" class="table table-striped table-responsive-md">
         <thead>
         <tr>
-            <th>Name</th>
             <th>Unique number</th>
+            <th>Name</th>
             <th>Price</th>
             <th>Actions</th>
         </tr>
         </thead>
         <tbody>
         <tr th:each="item : ${page.objects}">
-            <td th:text="${item.name}"></td>
             <td th:text="${item.uniqueNumber}"></td>
+            <td th:text="${item.name}"></td>
             <td th:text="${item.price}"></td>
             <td>
                 <div class="row row-cols-3">
-                    <a type="page-link" th:href="@{/items/{uuid}(uuid=${item.uniqueNumber})}">Read more</a>
-                    <form action="#" th:action="@{/items/delete}" th:method="post">
+                    <a type="page-link" th:href="@{/items/{uuid}(uuid=${item.uniqueNumber})}">Details</a>
+                    <form action="#" th:action="@{/items/delete}" th:method="post" th:if="${role}=='SALE_USER'">
                         <lable for="deleteItem"></lable>
                         <input type="hidden" name="itemIdForDelete" th:value="${item.id}" id="deleteItem">
                         <button type="submit" class="btn btn-primary bnt-sm mb-3">Delete item</button>
                     </form>
-                    <form action="#" th:action="@{/items/copy}" th:method="post">
+                    <form action="#" th:action="@{/items/copy}" th:method="post" th:if="${role}=='SALE_USER'">
                         <lable for="copyItem"></lable>
                         <input type="hidden" name="itemIdForCopy" th:value="${item.id}" id="copyItem">
                         <button type="submit" class="btn btn-primary bnt-sm mb-3">Copy item</button>
