--- a/web-module/src/main/resources/templates/profile.html
+++ b/web-module/src/main/resources/templates/profile.html
@@ -7,6 +7,29 @@
     <link rel="stylesheet" th:href="@{/css/bootstrap.rtl.css}">
 </head>
 <body>
+
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container-fluid">
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                    <a class="nav-link" aria-current="page" th:href="@{/articles}">Articles</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" th:href="@{/reviews/add}">Add reviews</a>
+                </li>
+                <li class="nav-item active">
+                    <a class="nav-link" th:href="@{/items}">Items</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" th:href="@{/orders}" tabindex="-1">Orders</a>
+                </li>
+            </ul>
+            <a class="btn btn-outline-success" th:href="@{/logout}">Logout</a>
+        </div>
+    </div>
+</nav>
+
 <div class="container">
     <table>
         <tr>
