--- a/web-module/src/main/resources/templates/reviews.html
+++ b/web-module/src/main/resources/templates/reviews.html
@@ -8,6 +8,21 @@
 
 </head>
 <body>
+
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container-fluid">
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+
+                <li class="nav-item">
+                    <a class="nav-link" th:href="@{/users}">Users</a>
+                </li>
+            </ul>
+            <a class="btn btn-outline-success" th:href="@{/logout}">Logout</a>
+        </div>
+    </div>
+</nav>
+
 <div class="container">
     <h1>Reviews</h1>
     <form action="#" th:action="@{/reviews/change-status}" th:method="post" id="checkbox_form_show"></form>
