--- a/web-module/src/main/resources/templates/users.html
+++ b/web-module/src/main/resources/templates/users.html
@@ -8,6 +8,19 @@
 </head>
 <body>
 
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container-fluid">
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                    <a class="nav-link" th:href="@{/reviews}">Reviews</a>
+                </li>
+            </ul>
+            <a class="btn btn-outline-success" th:href="@{/logout}">Logout</a>
+        </div>
+    </div>
+</nav>
+
 <div class="container">
     <h1>Users</h1>
     <a class="btn btn-primary bnt-sm mb-3" th:href="@{/users/add}"> Add User</a>
